# GnomeGames4Kindle

./: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
aisleriot/: Makefile.in  ar-game-chooser.c  stats-dialog.c  window.c
aisleriot/data/: Makefile.in
aisleriot/help/: Makefile.in
aisleriot/help/ca/: aisleriot.xml
aisleriot/help/de/: aisleriot.xml
aisleriot/help/el/: aisleriot.xml
aisleriot/help/en_GB/: aisleriot.xml
aisleriot/help/es/: aisleriot.xml
aisleriot/help/eu/: aisleriot.xml
aisleriot/help/fr/: aisleriot.xml
aisleriot/help/oc/: aisleriot.xml
aisleriot/help/ru/: aisleriot.xml
aisleriot/help/sl/: aisleriot.xml
aisleriot/help/sr/: aisleriot.xml
aisleriot/help/sr@latin/: aisleriot.xml
aisleriot/help/sv/: aisleriot.xml
aisleriot/help/zh_CN/: aisleriot.xml
aisleriot/icons/: Makefile.in
aisleriot/icons/gnome/: Makefile.in
aisleriot/icons/hildon/: Makefile.in
aisleriot/lib/: Makefile.am  Makefile.in
aisleriot/rules/: Makefile.in
glchess/: Makefile.in
glchess/data/: Makefile.in  engines.conf
glchess/data/pieces/: Makefile.in
glchess/data/textures/: Makefile.in
glchess/gnuchess/: Makefile.in
glchess/help/: Makefile.in
glchess/help/da/: glchess.xml
glchess/help/ja/: glchess.xml
glchess/help/sl/: glchess.xml
glchess/help/sr/: glchess.xml
glchess/help/sr@latin/: glchess.xml
glchess/src/: 3ds.c  Makefile.am  Makefile.in  ai-profile.c  ai-profile.vala  chess-bitboard.c  chess-clock.c  chess-engine-cecp.c  chess-engine-uci.c  chess-engine.c  chess-game.c  chess-pgn.c  chess-pgn.vala  chess-scene.c  chess-view-2d.c  chess-view-2d.vala  chess-view-3d.c  chess-view-3d.vala  chess-view.c  glchess.c  glchess.vala  history.c  test-chess-game.c  test-chess-pgn.c
glines/: Makefile.in
glines/help/: Makefile.in
glines/help/el/: glines.xml
glines/help/sl/: glines.xml
glines/help/sr/: glines.xml
glines/help/sr@latin/: glines.xml
gnect/: Makefile.in
gnect/data/: Makefile.in
gnect/help/: Makefile.in
gnect/help/ca/: gnect.xml
gnect/help/da/: gnect.xml
gnect/help/es/: gnect.xml
gnect/help/sl/: gnect.xml
gnect/help/sr/: gnect.xml
gnect/help/sr@latin/: gnect.xml
gnect/help/zh_CN/: gnect.xml
gnect/pixmaps/: Makefile.in
gnect/src/: Makefile.in
gnibbles/: Makefile.in
gnibbles/help/: Makefile.in
gnibbles/help/ca/: gnibbles.xml
gnibbles/help/es/: gnibbles.xml
gnibbles/help/sl/: gnibbles.xml
gnibbles/help/sr/: gnibbles.xml
gnibbles/help/sr@latin/: gnibbles.xml
gnibbles/help/zh_CN/: gnibbles.xml
gnibbles/pix/: Makefile.in
gnobots2/: Makefile.in  gnobots2.desktop
gnobots2/help/: Makefile.in
gnobots2/help/da/: gnobots2.xml
gnobots2/help/sl/: gnobots2.xml
gnobots2/help/sr/: gnobots2.xml
gnobots2/help/sr@latin/: gnobots2.xml
gnome-sudoku/: Makefile.in
gnome-sudoku/data/: Makefile.in
gnome-sudoku/help/: Makefile.in
gnome-sudoku/help/ca/: gnome-sudoku.xml
gnome-sudoku/help/cs/: gnome-sudoku.xml
gnome-sudoku/help/da/: gnome-sudoku.xml
gnome-sudoku/help/el/: gnome-sudoku.xml
gnome-sudoku/help/eu/: gnome-sudoku.xml
gnome-sudoku/help/fr/: gnome-sudoku.xml
gnome-sudoku/help/it/: gnome-sudoku.xml
gnome-sudoku/help/oc/: gnome-sudoku.xml
gnome-sudoku/help/ru/: gnome-sudoku.xml
gnome-sudoku/help/sl/: gnome-sudoku.xml
gnome-sudoku/help/sr/: gnome-sudoku.xml
gnome-sudoku/help/sr@latin/: gnome-sudoku.xml
gnome-sudoku/help/sv/: gnome-sudoku.xml
gnome-sudoku/images/: Makefile.in
gnome-sudoku/src/: Makefile.in
gnome-sudoku/src/lib/: Makefile.in
gnomine/: Makefile.am  Makefile.in  gnomine.c  minefield.c  minefield.h
gnomine/help/: Makefile.in
gnomine/help/da/: gnomine.xml
gnomine/help/sl/: gnomine.xml
gnomine/help/sr/: gnomine.xml
gnomine/help/sr@latin/: gnomine.xml
gnomine/icons/: Makefile.in
gnotravex/: Makefile.in
gnotravex/help/: Makefile.in
gnotravex/help/ca/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  shortcut.page  size.page  usage.page  winning.page
gnotravex/help/cs/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  shortcut.page  size.page  usage.page  winning.page
gnotravex/help/da/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  shortcut.page  size.page  usage.page
gnotravex/help/de/: usage.page
gnotravex/help/el/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  shortcut.page  size.page  usage.page  winning.page
gnotravex/help/en_GB/: usage.page
gnotravex/help/es/: usage.page
gnotravex/help/eu/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  size.page  usage.page
gnotravex/help/fr/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  shortcut.page  size.page  usage.page  winning.page
gnotravex/help/it/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  shortcut.page  size.page  usage.page
gnotravex/help/oc/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  size.page  usage.page
gnotravex/help/ru/: gameplay.page  hint.page  index.page  license.page  move.page  multiplayer.page  size.page  usage.page
gnotravex/help/sl/: gameplay.page  (+8 more)
gnotravex/pixmaps/: Makefile.in
gnotski/: Makefile.in
gnotski/help/: Makefile.in
gtali/: Makefile.in
gtali/help/: Makefile.in
gtali/pix/: Makefile.in
iagno/: Makefile.am  Makefile.in  gnothello.c  gnothello.h  properties.c
iagno/help/: Makefile.in
icons/: Makefile.am  Makefile.in
libgames-support/: Makefile.in  games-files.c  games-marshal.c  games-marshal.h  games-scores-dialog.c  games-show.c
lightsoff/: Makefile.in
lightsoff/help/: Makefile.in
lightsoff/src/: Makefile.in
mahjongg/: Makefile.am  Makefile.in  drawing.c  mahjongg.c
mahjongg/help/: Makefile.am  Makefile.in
quadrapassel/: Makefile.in
quadrapassel/help/: Makefile.in
quadrapassel/pix/: Makefile.in
sounds/: Makefile.in
swell-foop/: Makefile.in
swell-foop/help/: Makefile.in
swell-foop/src/: Makefile.in
(+104 files in other folders)
